# pygametools

./: .gitignore  CLAUDE.md  LICENSE  plots_design.md  pyproject.toml  readme.md  requirements.txt  setup.py
examples/: gui_example_1.py  gui_theme_creator.py  plots_dev.py  plotting_plot_demo.py  sim_example.py  test.py
examples/plotting_test_resources/: test_img.csv
src/: ctd.md
src/pygametools/color/: __init__.py  color.py
src/pygametools/fonts/: __init__.py
src/pygametools/gui/: base.py  elements.py  file_manager.py
src/pygametools/gui/themes/: darkblue.json  default.json  default_dark.json  default_light.json  lightblue.json
src/pygametools/plots/: draw.py  drawing.py  elements.py  plot_types.py  types.py
src/pygametools/plotting/: !NEW.py  MOVED_TO_COLORcolor.py  __init__.py  base.py  legend.py  plotdraw.py  plots.py  previews.py
